--- a/ss.html
+++ b/ss.html
@@ -1,122 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Footer Layout</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* Footer Styling */
-    .footer {
-      background-color: #EFF2F1;
-      padding: 50px 0;
-    }
-
-    /* Subscribe Section Styling */
-    .subscribe-section {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 30px;
-    }
-
-    .subscribe-section input {
-      margin: 0 10px;
-    }
-
-    /* Footer Logo and Description */
-    .footer-logo {
-      margin-bottom: 20px;
-    }
-
-    /* Footer Links */
-    .footer-links {
-      margin-bottom: 20px;
-    }
-
-    .footer-links h4 {
-      font-weight: bold;
-    }
-
-    /* Social Media Icons Styling */
-    .social-icons {
-      display: flex;
-      gap: 20px;
-      justify-content: center;
-      margin-top: 30px;
-    }
-
-    .social-icons i {
-      font-size: 24px;
-      padding: 10px;
-      border-radius: 50%;
-      background-color: gray;
-      color: white;
-    }
-
-    .footer-logo img {
-      max-width: 150px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learn Programming</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to bottom, #1e293b, #111827);
+            color: #f1f5f9;
+        }
+        header {
+            background-color: #0f172a;
+            padding: 20px;
+            text-align: center;
+            border-bottom: 2px solid #4f46e5;
+        }
+        header h1 {
+            font-size: 2.5rem;
+            color: #4f46e5;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 10px 0;
+        }
+        nav a {
+            text-decoration: none;
+            color: #f1f5f9;
+            font-size: 1.1rem;
+            transition: color 0.3s;
+        }
+        nav a:hover {
+            color: #4f46e5;
+        }
+        .hero {
+            text-align: center;
+            padding: 50px 20px;
+        }
+        .hero h2 {
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
+        .hero p {
+            font-size: 1.2rem;
+            line-height: 1.5;
+        }
+        .hero button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1rem;
+            border: none;
+            background-color: #4f46e5;
+            color: #f1f5f9;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        .hero button:hover {
+            background-color: #4338ca;
+        }
+        .sections {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+        .section {
+            background-color: #1e293b;
+            border: 2px solid #4f46e5;
+            border-radius: 8px;
+            padding: 20px;
+            text-align: center;
+        }
+        .section h3 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+        .section p {
+            font-size: 1rem;
+            line-height: 1.4;
+        }
+        footer {
+            background-color: #0f172a;
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+        }
+        footer p {
+            font-size: 0.9rem;
+            color: #94a3b8;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Learn Programming</h1>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#courses">Courses</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
-  <!-- Footer Section -->
-  <div class="footer">
-    <div class="container">
-      <!-- Subscribe Section -->
-      <div class="subscribe-section">
-        <div>
-          <h4>Subscribe with Newsletter</h4>
-        </div>
-        <div class="d-flex align-items-center">
-          <input type="text" class="form-control" placeholder="Enter Name" style="width: 150px;">
-          <input type="email" class="form-control" placeholder="Enter Email" style="width: 200px;">
-          <button class="btn btn-primary ms-3">
-            <i class="bi bi-envelope"></i> <!-- Optional message icon -->
-          </button>
-        </div>
-        <img src="https://via.placeholder.com/100" alt="Image" class="ms-3">
-      </div>
-
-      <!-- Footer Logo and Description -->
-      <div class="footer-logo text-center">
-        <img src="https://via.placeholder.com/150" alt="Logo">
-        <p>Website Description: We offer the best products and services.</p>
-      </div>
-
-      <!-- Footer Links Section -->
-      <div class="row footer-links">
-        <div class="col-md-3">
-          <h4>About Us</h4>
-          <p>Description of the company goes here.</p>
-        </div>
-        <div class="col-md-3">
-          <h4>Support</h4>
-          <p>We provide 24/7 support for all your needs.</p>
-        </div>
-        <div class="col-md-3">
-          <h4>Jobs</h4>
-          <p>Join our team and be part of the journey.</p>
-        </div>
-        <div class="col-md-3">
-          <h4>Nordic Chair</h4>
-          <p>Discover our range of Nordic chairs designed for comfort.</p>
-        </div>
-      </div>
-
-      <!-- Social Media Icons -->
-      <div class="social-icons">
-        <a href="#" class="btn btn-secondary"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="btn btn-secondary"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="btn btn-secondary"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="btn btn-secondary"><i class="bi bi-linkedin"></i></a>
-      </div>
+    <div class="hero">
+        <h2>Welcome to the World of Programming!</h2>
+        <p>Learn programming from scratch with our easy-to-follow tutorials, interactive exercises, and engaging projects. Whether you're a beginner or an advanced learner, we've got you covered!</p>
+        <button>Get Started</button>
     </div>
-  </div>
 
-  <!-- Bootstrap and Icons CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+    <div class="sections">
+        <div class="section" id="about">
+            <h3>About Us</h3>
+            <p>We are dedicated to making programming accessible to everyone. Our platform provides resources for all skill levels.</p>
+        </div>
+        <div class="section" id="courses">
+            <h3>Courses</h3>
+            <p>Explore topics like Web Development, Python, Java, and Machine Learning with our step-by-step guides.</p>
+        </div>
+        <div class="section" id="contact">
+            <h3>Contact</h3>
+            <p>Have questions? Reach out to us and we’ll help you start your programming journey!</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 Learn Programming. All rights reserved.</p>
+    </footer>
 </body>
 </html>
